# Universal-Obsidian-Import-Toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt  unobit.yaml
docs/: architecture-overview.md  bundle_sprint4_context.md  bundle_sprint5_context.md  eindontwikkelsessie.txt  gebruiker test.txt  project-state.md  public-beta-checklist.md  session-handover.md  source-bundle.md
docs/adr/: ADR-001-project-principles.md  ADR-002-universal-note-model.md  (+3 more)
test-reports/: junit-report-20260708-094156.xml  junit-report-20260708-123933.xml  junit-report-20260708-210324.xml  pytest-report-20260708-094156.txt  pytest-report-20260708-123933.txt  pytest-report-20260708-210324.txt
tests/: test_attachment_index.py  test_content_cleanup_processor.py  test_default_pipeline_integration.py  test_default_pipeline_timings.py  test_enml_cleanup.py  test_enml_converter.py  test_enml_media.py  test_enml_postprocess.py  test_enml_todos.py  test_evernote_enml_conversion.py  test_evernote_internal_link_processor.py  test_evernote_link_resolver.py  test_import_report.py  test_media_link_resolver.py  test_note_validator.py  test_pipeline_context.py  test_pipeline_evernote_links.py  test_pipeline_factory.py  test_processing_pipeline.py  test_processing_step.py  test_timing_step.py  test_title_cleanup_processor.py  test_validation_step.py  test_validator_base.py
tools/: bundle_source.py  bundle_sprint3_context.py  bundle_sprint4_context.py  bundle_sprint5_context.py  generate_enex_test_data.py  run_tests_report.ps1
(+72 files in other folders)
